# flagserpy

./: .gitignore  CMakeLists.txt  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  wheels.yml
doc/: conf.py  index.rst
docs/superpowers/plans/: 2026-05-22-scikit-build-migration.md
docs/superpowers/specs/: 2026-05-22-scikit-build-migration-design.md
flagserpy/: __init__.py
flagserpy/tests/: test_flagio.py  test_flagser.py  test_flagser_count.py
src/: flagser_bindings.cpp  flagser_count_bindings.cpp
